the photo popup was not fitting the imgs properly. changed to contain, that fixed both portrait and landscape

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -457,7 +457,7 @@ html {
 			//background-image: url(../images/assange-example.jpg);
 			background-repeat: no-repeat;
 			background-position: center center;
-			background-size: 100%;
+			background-size: contain;
 			background-color: rgba(0, 0, 0, 0.8);
 			width: 100%;
 			height: 100%;
